# Reconstruction_Pipeline

./: README.md
VINS-RGBD/camera_model/: CMakeLists.txt
VINS-RGBD/config/: bag_recorder.sh
VINS-RGBD/config/azure/: azure_color_config.yaml  azure_depth_config.yaml
VINS-RGBD/config/realsense/: realsense_color_config.yaml  realsense_depth_config.yaml
VINS-RGBD/feature_tracker/: CMakeLists.txt
VINS-RGBD/pose_graph/: CMakeLists.txt
VINS-RGBD/vins_estimator/: CMakeLists.txt
VINS-RGBD/vins_estimator/launch/: azure_color.launch
VINS-RGBD/vins_estimator/src/: estimator_node.cpp
VINS-RGBD/vins_estimator/src/utility/: visualization.cpp  visualization.h
docker/: build-dokcer-image.bash  dockerfile  run-docker-container.bash
voxblox/voxblox_ros/cfg/: voxblox_vis.rviz
voxblox/voxblox_ros/launch/: rgbd_dataset.launch  rgbd_dataset_azure.launch  rgbd_dataset_l515.launch
